--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="identifying_code">验证码</string>
-    <string name="telphone_num">电话</string>
+    <string name="telphone_num">手机号</string>
     <string name="password">密码</string>
     <string name="confirm">确认</string>
     <string name="prescribe">开药</string>
